# backend/src/routes/router.js
@@ -1,4 +1,5 @@
 const router = require('express').Router()
 router.use(require('./user'))
 router.use(require('./groups'))
+router.use(require('./messages'))
 module.exports = router
